--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "leejasper851/leejasper851.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "custom/Portrait3.png"
+  avatar           : "Portrait3.png"
   name             : "Jasper Lee"
   pronouns         : "he/him" # example: "she/her"
   bio              : "4th Year Undergraduate CS and Math Major at UT Austin"
