recreated 'images/custom' folder and got rid of self-referential website link

--- a/_config.yml
+++ b/_config.yml
@@ -21,13 +21,13 @@ repository               : "leejasper851/leejasper851.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "Portrait3.jpg"
+  avatar           : "custom/Portrait3.jpg"
   name             : "Jasper Lee"
   # pronouns         : "he/him" # example: "she/her"
   bio              : "4th Year Undergraduate CS and Math Major at UT Austin"
   location         : "Austin, Texas"
   employer         : "University of Texas at Austin"
-  uri              : "https://leejasper851.github.io" # URL # TODO: is this necessary?
+  # uri              : "https://leejasper851.github.io" # URL
   email            : "leejasper851@gmail.com"
 
   # Academic websites
