--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ author:
   avatar           : "custom/Portrait3.jpg"
   name             : "Jasper Lee"
   # pronouns         : "he/him" # example: "she/her"
-  bio              : "4th Year Undergraduate CS and Math Major at UT Austin"
-  location         : "Austin, Texas"
-  employer         : "University of Texas at Austin"
+  bio              : "1st Year CS PhD Student at UIUC"
+  location         : "Urbana, Illinois"
+  employer         : "University of Illinois Urbana-Champaign"
   # uri              : "https://leejasper851.github.io" # URL
   email            : "leejasper851@gmail.com"
 
